# online-pointcloud-segmentation

./: .gitattributes  2019-11-08-16-35-41.bag  CMakeLists.txt  Readme.md  package.xml
launch/: test_segment.launch
rviz_cfg/: default.rviz
src/: RIBSegment.cpp  RIBSegment.h  SegmentNode.cpp  frontend.cpp  frontend.h  frontend_node.cpp  gicp.cpp  gicp.h  node.cpp
